# docs/swagger.yaml
@@ -119,7 +119,19 @@ definitions:
         example: 1
         type: integer
     type: object
-  model.Ticket:
+  model.TicketCreateRequest:
+    properties:
+      departmentId:
+        example: 5f9e3b4e1d9eaf1f3125fc3f
+        type: string
+      timeSlot:
+        example: "2020-11-02T10:00:00.000Z"
+        type: string
+      userId:
+        example: 5f9e3b4e1d9eaf1f3125fc3f
+        type: string
+    type: object
+  model.TicketResponse:
     properties:
       _id:
         example: 5f9e3b4e1d9eaf1f3125fc3f
@@ -249,7 +261,7 @@ paths:
         name: ticket
         required: true
         schema:
-          $ref: '#/definitions/model.Ticket'
+          $ref: '#/definitions/model.TicketCreateRequest'
       produces:
       - application/json
       responses:
@@ -309,7 +321,7 @@ paths:
         "200":
           description: Ticket
           schema:
-            $ref: '#/definitions/model.Ticket'
+            $ref: '#/definitions/model.TicketResponse'
         "404":
           description: Not Found
           schema:
@@ -335,7 +347,7 @@ paths:
           description: Tickets
           schema:
             items:
-              $ref: '#/definitions/model.Ticket'
+              $ref: '#/definitions/model.TicketResponse'
             type: array
         "404":
           description: Not Found
@@ -362,7 +374,7 @@ paths:
           description: Tickets
           schema:
             items:
-              $ref: '#/definitions/model.Ticket'
+              $ref: '#/definitions/model.TicketResponse'
             type: array
         "404":
           description: Not Found
